# rinha-2025-python

./: .dockerignore  .env.copy  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml
backend/: __main__.py  config.py  keydb.py  utils.py  wsgi.py
backend/api/: payments.py  serializers.py  urls.py
backend/services/: keydb.py  payment.py
docker/: Dockerfile
docker/participation/: docker-compose.yml
restcraft/: constants.py
restcraft/core/: __init__.py  exceptions.py  serializer.py  wsgi.py
restcraft/core/serializers/: __init__.py  fields.py  serializers.py
restcraft/http/: __init__.py  request.py  response.py
restcraft/urls/: __init__.py  conf.py  matchit.py
restcraft/views/: __init__.py  base.py
tasks/: payments.py
worker/: __main__.py  confg.py  config.py  keydb.py
